make-a-wish-salesforce/src/objects/Loop__Form_Field__c.object
<CustomObject>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>DocGen Package</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipLabel>Form Fields</relationshipLabel>
        <relationshipName>Form_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Error_Message__c</fullName>
        <inlineHelpText>The message displayed when the input value does not match the field validation.</inlineHelpText>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Form_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Step</label>
        <referenceTo>Loop__Form_Step__c</referenceTo>
        <relationshipLabel>Form Fields</relationshipLabel>
        <relationshipName>Form_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__Help_Text__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Ignored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__List_Values__c</fullName>
        <label>List Values</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__SfDefault_Value__c</fullName>
        <label>SfDefault Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__TagView__c</fullName>
        <formula>Loop__Tag__c</formula>
        <label>Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Tag__c</fullName>
        <description>The text in the document corresponding to this form field.</description>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Memo</fullName>
                </value>
                <value>
                    <fullName>Rich Text</fullName>
                </value>
                <value>
                    <fullName>Drop Down</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Radio Inline</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Checkbox Inline</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Validation__c</fullName>
        <inlineHelpText>This can be any regular expression you wish to use to validate this field. See http://regexlib.com/CheatSheet.aspx</inlineHelpText>
        <label>Validation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form Field</label>
    <nameField>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>